--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
         }
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "@commitlint/cli": "^8.3.5",
         "@commitlint/config-conventional": "^8.3.4",
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "commitizen": "^4.1.2",
         "cross-env": "^7.0",
         "husky": "^4.2.5",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "popper.js": "^1.12",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
