--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@commitlint/config-conventional": "^8.3.4",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "commitizen": "^4.1.2",
         "cross-env": "^7.0",
         "husky": "^4.2.5",
